--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,28 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    UPLOADCARE_PUBLIC_KEY = '2b9cee02e41f4b7b23fa';
+  </script>
+  
+  <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
+  <style>
+    .uploader-button .uploadcare--widget__button_type_open {
+      background-color: #47d176;
+    }
+  </style>
+  
+  <script>
+    UPLOADCARE_LOCALE_TRANSLATIONS = {
+      buttons: {
+        choose: {
+          files: {
+            one: 'Upload image'
+          }
+        }
+      }
+    }
+  </script>
 </head>
 <body>
   <app-root></app-root>
