Adding File Upload

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script>
+  <!-- <script>
     UPLOADCARE_PUBLIC_KEY = '2b9cee02e41f4b7b23fa';
   </script>
   
@@ -27,7 +27,7 @@
         }
       }
     }
-  </script>
+  </script> -->
 </head>
 <body>
   <app-root></app-root>
